zkay/examples/type_errors/StateVariables.sol
pragma solidity ^0.5.0;

contract StateVariables {

    address super_owner;
	address@super_owner owner;
	uint@owner x;

}
